# group4capstoneproject

./: package-lock.json  package.json
mimic-main/: Cargo.toml
mimic-main/src/: main.rs
mimic-main/src/mips32/: core.rs
public/: index.html
src/: App.css  App.js  App.test.js  index.css
src/components/: CodeContentDisplays.js  CodeContentDisplays.test.js  Editor.js  Editor.test.js  Header.css  Header.js  Header.test.js  PDFViewer.css  PDFViewer.js  RegisterDisplay.js  RegisterDisplay.test.js
src/data/: instructionDetails.js
src/mimic-wasm/: Cargo.toml  index.html
src/mimic-wasm/pkg/: mimic_wasm.d.ts  mimic_wasm.js  mimic_wasm_bg.wasm  mimic_wasm_bg.wasm.d.ts  package.json
src/mimic-wasm/src/: lib.rs
